Create function for shopping cart SF